--- a/BabelSpeaker/res/values/strings.xml
+++ b/BabelSpeaker/res/values/strings.xml
@@ -1,8 +1,253 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">BabelSpeaker</string>
+    <string name="app_name">通天喇叭</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="pull_to_refresh">下拉可以刷新</string>
+    <string name="last_update">上次更新</string>
+    <string name="login_username_hint">手机/QQ/用户名</string>
+    <string name="user_name">用户名</string>
+    <string name="user_id">掌金ID</string>
+    <string name="password">密码</string>
+    <string name="register">注册</string>
+    <string name="login">登录</string>
+    <string name="total_quit">完全退出</string>
+    <string name="app_quit">退出应用</string>
+    <string name="yy_live">进入掌金直播室</string>
+    <string name="logout">退出账号</string>
+    <string name="remember_pwd">记住密码</string>
+    <string name="find_password">找回密码</string>
+    <string name="forget_password">忘记密码?</string>
+    <string name="delete">删除</string>
+    <string name="add">添加</string>
+    <string name="qt_room">语音解盘</string>
+    <string name="registered">已注册</string>
+    <string name="account_application">开户申请</string>
+    <string name="appointment_now">立即预约</string>
+    <string name="complement_data">补全资料</string>
+    <string name="has_open_account">已开户</string>
+    <string name="vip_users">vip用户</string>
+    <string name="updated_service">升级后服务：</string>
+    <string name="update_service">升级服务</string>
+    <string name="basic_information">基本信息</string>
+    <string name="nickname">昵称</string>
+    <string name="full_name">姓名</string>
+    <string name="phone">手机</string>
+    <string name="qq">QQ</string>
+    <string name="qq_group">QQ群</string>
+    <string name="qq_count">QQ账号</string>
+    <string name="mail">邮箱</string>
+    <string name="account">账号</string>
+    <string name="announcement">公告</string>
+    <string name="account_info">账号信息</string>
+    <string name="account_balance">账号余额</string>
+    <string name="balance">余额</string>
+    <string name="bonus">红利</string>
+    <string name="freeze">冻结</string>
+    <string name="recharge">充值</string>
+    <string name="change_password">修改密码</string>
+    <string name="recharge_history">充值历史</string>
+    <string name="consumer_history">消费历史</string>
+    <string name="account_status">开户状态</string>
+    <string name="current_status">当前状态</string>
+    <string name="yet_account">未开户</string>
+    <string name="td_premium">TD溢价：</string>
+    <string name="au_ag_percent">金银比：</string>
+    <string name="au_pt_percent">金铂比：</string>
+    <string name="quotes">行情</string>
+    <string name="news">资讯</string>
+    <string name="service">服务</string>
+    <string name="more">更多</string>
+    <string name="contact_us">联系我们</string>
+    <string name="chart_param_setting">指标参数设置</string>
+    <string name="price_cal">价格换算</string>
+    <string name="td_gain_loss">T+D盈亏计算器</string>
+    <string name="mall">会员商城</string>
+    <string name="bind">绑定</string>
+    <string name="edit">编辑</string>
+    <string name="qq_register_info">请登录QQ邮箱激活账号后才可注册完成</string>
+    <string name="phone_register_info">为了资料安全，请输入正确的手机号</string>
+    <string name="phone_enter">输入手机号</string>
+    <string name="send_verification">发送验证码</string>
+    <string name="reply">回复</string>
+    <string name="confirm_password">密码确认</string>
+    <string name="enter_verification">请输入验证码</string>
+    <string name="modify">修改</string>
+    <string name="how_to_update_account">如何升至下一级：</string>
+    <string name="sure">确定</string>
+    <string name="cancel">取消</string>
+    <string name="submit">提交</string>
+    <string name="modify_phone">修改手机</string>
+    <string name="update">升级</string>
+    <string name="update_history">更新历史</string>
+    <string name="check_update">检查更新</string>
+    <string name="old_password">旧密码</string>
+    <string name="new_password">新密码</string>
+    <string name="institutional_review">机构评论</string>
+    <string name="exchange_introduction">交易所介绍</string>
+    <string name="investment_institutions">投资机构</string>
+    <string name="exchange">交易所</string>
+    <string name="pupil_quotes">多空行情</string>
+    <string name="finance_calendar">财经日历</string>
+    <string name="voice_solution">语音解盘</string>
+    <string name="voice_live">语音直播</string>
+    <string name="offical_activity">官方活动</string>
+    <string name="quotes_remind">报价提醒</string>
+    <string name="input_feedback">输入反馈信息</string>
+    <string name="exchange_and_investment">交易所与投资机构</string>
+    <string name="remind_ring_setup">提醒铃声设置</string>
+    <string name="ring">铃声</string>
+    <string name="rise_ring">上涨铃声</string>
+    <string name="fall_ring">下跌铃声</string>
+    <string name="shock_remind">提醒时震动</string>
+    <string name="remind_period">提醒持续时间</string>
+    <string name="reminder_time_period">提醒时间段</string>
+    <string name="start">开始</string>
+    <string name="end">结束</string>
+    <string name="mute">静音</string>
+    <string name="exclusive_policy">独家策略</string>
+    <string name="multi">多</string>
+    <string name="air">空</string>
+    <string name="fair">持平</string>
+    <string name="i_want_open_account">我要开户</string>
+    <string name="understand_detail">了解详情</string>
+    <string name="zhangjin_tactics">掌金策略</string>
+    <string name="daily_express">每日快讯</string>
+    <string name="knowledge_news">快讯直播</string>
+    <string name="depth_analysis">深度解析</string>
+    <string name="select_warn">您必须选择一项显示</string>
+    <string name="etf">ETF持仓</string>
+    <string name="brand_gold">品牌金</string>
+    <string name="td_deferred_charges">TD延期费方向</string>
+    <string name="check_detail">查看详情</string>
+    <string name="plate">跟盘</string>
+    <string name="setting">设置</string>
+    <string name="gold_history">金历史</string>
+    <string name="silver_history">银历史</string>
+    <string name="auag_us_oil_percent">金银/美元/石油比</string>
+    <string name="account_information">账户信息</string>
+    <string name="system_setting">系统设置</string>
+    <string name="disclaimer">免责声明</string>
+    <string name="feedback">意见反馈</string>
+    <string name="about_us">关于我们</string>
+    <string name="not_empty">不能为空</string>
+    <string name="accumulation_schedule">积累进度：</string>
+    <string name="prompt_remind">暂未添加任何提醒</string>
+    <string name="instructions_for_use">使用说明</string>
+    <string name="enter_price">请输入价格</string>
+    <string name="corresponding_platform">对应平台</string>
+    <string name="cash_twenty_info">余额不足20金币，请充值</string>
+    <string name="cash_info">余额不足，请充值</string>
+    <string name="next_step">下一步</string>
+    <string name="back">返回</string>
+    <string name="back_and_edit">返回编辑</string>
+    <string name="get_verfication">获取验证码</string>
+    <string name="adjust">调整</string>
+    <string name="stay_tuned">敬请期待</string>
+    <string name="zhang_jin">掌金</string>
+    <string name="tip">提示</string>
+    <string name="dollar_price_input">美元/盎司</string>
+    <string name="rmb_price">人民币/千克</string>
+    <string name="rmb_as">人民币/盎司</string>
+    <string name="dollar_rmb_rate">美元：人民币 = </string>
+    <string name="get_data_error">获取数据失败，请重试</string>
+    <string name="no_more_information">无更多信息</string>
+    <string name="buy_price">买入价</string>
+    <string name="sell_price">卖出价</string>
+    <string name="not_vip">您当前不是掌金VIP用户，无法查看盘中指导内容，您可升级成为VIP用户后查看</string>
+    <string name="add_remind_type">添加提醒种类</string>
+    <string name="float_remind">浮动提醒</string>
+    <string name="base_price">基准价</string>
+    <string name="range">浮动值</string>
+    <string name="remind_value">提醒值</string>
+    <string name="point_remind">点位提醒</string>
+    <string name="close_deal">停盘</string>
+    <string name="greater">大于</string>
+    <string name="less">小于</string>
+    <string name="widget_single_price_setting">小部件（单品报价）设置</string>
+    <string name="repeat_login_tip">您手机已在其他手机登陆，请重新登陆</string>
+    <string name="reply_hint">请输入回复信息</string>
+    <string name="immediately_get">立即领取</string>
+    <string name="cancel_get">取消领取</string>
+    <string name="already_product_get">已领取的商品</string>
+    <string name="recipient">领取姓名</string>
+    <string name="recipient_address">收件地址</string>
+    <string name="write_code">收件邮编</string>
+    <string name="contact_phone">联系电话</string>
+    <string name="product_detail">商品详情</string>
+    <string name="product_submit_info">提交信息</string>
+    <string name="sure_submit">确认提交</string>
+    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
+    <string name="pull_to_refresh_release_label">松开可以刷新</string>
+    <string name="pull_to_refresh_refreshing_label">加载中...</string>
+    <string name="pull_to_refresh_tap_label">更多</string>
+    <string name="pull_to_refresh_tap_get_new">点击刷新</string>
+    <string name="credits">积分</string>
+    <string name="credits_help">积分说明</string>
+    <string name="i_want_it">我想要</string>
+    <string name="price_tip">备注：括号内数值为对应平台与标准报价的溢价值</string>
+    <string name="daily_express_loading">华尔街见闻快讯直播中...</string>
+    
+    <string name="mall_credits_1">  每天登录掌金应用</string>
+    <string name="mall_credits_2">  开户成为黄金用户</string>
+    <string name="mall_credits_3">  开户交易做单</string>
+    <string name="mall_credits_4">  向朋友推荐本应用</string>
+    <string name="mall_credits_5">  提供有价值的建议</string>
+    <string name="mall_credits_6">  反馈应用BUG</string>
+    <!-- 行情 -->
+    <string name="type">类型</string>
+    <string name="buy">买入</string>
+    <string name="sell">卖出</string>
+    <string name="high">最高</string>
+    <string name="low">最低</string>
+    <string name="today_open">今开</string>
+    <string name="last_close">昨收</string>
+    <string name="high_low">高低</string>
+    <string name="up_down">涨跌</string>
+    <string name="optional">自选</string>
+    <string name="optional_quotes">行情自定义</string>
+    <string name="quotes_queue">种类排序</string>
+    <string name="quotes_edit">种类编辑</string>
+    <string name="one_min">1分</string>
+    <string name="five_min">5分</string>
+    <string name="fifteen_min">15分</string>
+    <string name="thirty_min">30分</string>
+    <string name="one_hour">60分</string>
+    <string name="four_hour">4小时</string>
+    <string name="one_day">1日</string>
+    <string name="one_week">1周</string>
+    <string name="one_month">1月</string>
+    <string name="time_chart">分时图</string>
+    <string name="k_line">K线</string>
+    <string name="local_remind">免费提醒</string>
+    <string name="sms_remind">短信提醒</string>
+    <string name="indicator_volumn">VOL成交量</string>
+    <string name="indicator">指标</string>
+    <string name="indicator_macd">MACD指标</string>
+    <string name="indicator_boll">BOLL布林线</string>
+    <string name="indicator_kdj">KDJ随机指标</string>
+    <string name="indicator_rsi">RSI强弱指标</string>
+    <string name="indicator_sma">SMA均线</string>
+    <string name="indicator_ema">EMA均线</string>
+    <string name="indicator_env">ENV指标</string>
+    <string name="data_refresh">数据加载中..</string>
+    <string name="close">关闭</string>
+    <string name="data_loading">数据加载中..</string>
+    <string name="data_upload">数据提交中</string>
+    <string name="open_account">开户</string>
+    <string name="bussiness_rule">交易规则</string>
+    <string name="open_deal_app">打开交易软件</string>
+    <string name="simulation">模拟</string>
+    <string name="real_trade">实盘交易</string>
+    <string name="simulation_trade">模拟交易</string>
+    <string name="intraday_guidance">盘中指导</string>
+    <string name="period">周期</string>
+    <string name="bonus_info">系统红利</string>
+    <string name="freeze_info">冻结资金</string>
+    <string name="switch_info">设置浮动提醒需先开启浮动提醒</string>
+    <string name="base_price_info">输入您所要设置的基准价</string>
+    <string name="range_info">提醒的价位的范围</string>
+    <string name="point_info">设置您想提醒的报价价位</string>
 
 </resources>
